--- a/package.json
+++ b/package.json
@@ -3,9 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@types/react-responsive": "^3.0.2",
+    "@types/react-transition-group": "^2.0.14",
+    "merge": ">=1.2.1",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
-    "react-scripts-ts": "2.17.0"
+    "react-responsive": "^6.0.1",
+    "react-router-dom": "^4.3.1",
+    "react-scripts-ts": "2.17.0",
+    "react-transition-group": "^2.5.0",
+    "webfontloader": "^1.6.28"
   },
   "scripts": {
     "start": "react-scripts-ts start",
@@ -16,7 +23,7 @@
   "devDependencies": {
     "@types/jest": "^23.3.2",
     "@types/node": "^10.11.0",
-    "@types/react": "^16.4.14",
+    "@types/react": "^16.4.18",
     "@types/react-dom": "^16.0.7",
     "typescript": "^3.0.3"
   }
