--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "dependencies": {
     "@types/react-responsive": "^3.0.2",
+    "@types/react-router": "^4.4.1",
+    "@types/react-router-dom": "^4.3.1",
     "@types/react-transition-group": "^2.0.14",
     "merge": ">=1.2.1",
     "react": "^16.5.2",
